tests/docs/playwright/ojs/errors/test-arquero-bug.qmd
---
title: "Tests whether we clear all errors when we should."
format:
  html:
    code-tools: true
---

There should be (eventually) no errors in this execution.

```{ojs}
import { aq, op } from '@uwdata/arquero'
penguins = aq.loadCSV("palmer-penguins.csv")

penguins.view()

penguins
  .groupby('species')
  .filter(p => p.body_mass > 0)
  .rollup({
    count: op.count(),
    avg_mass: op.average('body_mass')
   })
  .view()
```

